# rpsls_game

./: .gitignore  README.md  docker-compose.yaml
api/: README.md  alembic.ini  auth.py  config.py  constants.py  database.py  main.py  models.py  schemas.py  services.py
api/routers/: choices.py  play.py  players.py  scoreboard.py
api/tests/: conftest.py  test_auth.py  test_choices.py  test_play.py  test_players.py  test_scoreboard.py  test_services.py
infra/api/: .env.example  Dockerfile  entrypoint.sh  log_config.yaml  pyproject.toml  run_tests.sh
infra/ui/: Dockerfile  nginx.conf
ui/: package-lock.json  package.json
ui/src/: App.jsx  Constants.jsx  index.css  services.js
ui/src/components/: AuthForm.jsx  ChoiceButton.jsx  Game.jsx  GameResult.jsx  GameRules.jsx  Scoreboard.jsx
