[project]
name = "rpsls-game-api"
version = "0.1.0"
description = "rpsls-game-api"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.16.2"
anyio = "4.9.0"
fastapi = "0.115.14"
fastapi-swagger = "0.2.22"
sqlalchemy = "2.0.41"
psycopg2-binary = "2.9.10"
PyJWT = "2.10.1"
PyYAML = "6.0.2"
pytest = "8.4.1"
passlib = "1.7.4"
uvicorn = "0.35.0"
requests = "2.32.4"
cffi = "1.17.1"
click = "8.2.1"
cryptography = "45.0.4"
greenlet = "3.2.3"
httpx = "0.28.1"
idna = "3.10"
pydantic = "1.10.22"
starlette = "0.46.2"
typing_extensions = "4.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
